hw9/src/test/resources/valid/two_functions.L
fun1() {

}

fun2(fun1) {
    do_fun_things()
}