hw9/src/test/resources/invalid/if_missing_brace.L
if (true) {
    if (really_true) {
        pass()
    } else {
        not_pass()
    }
